# blog-source

./: blog.cabal  deploy  stack.yaml
app/: Main.hs  Protolede.hs
site/_drafts/: heroku.md  naperian.md
site/css/: style.css  tufte.css
site/drafts/: sums-of-two-squares.md  xyjax.md
site/drafts/category-theory/: introduction.md  kinds-of-morphisms.md
site/js/: highlight.pack.js  xypic.js
site/posts/: in-which-we-talk-a-lot.md  p-adics.md  so-what-are-schemes.md  sums-of-two-squares.md
site/posts/so-what-are-schemes/: introduction.md  prime-ideals.md  schemes-i.md
site/templates/: about.html  colophon.html  footer.html  front-page.mustache  index.html  mathjax.html  meta.html  nav.html  post-list.html  post.html  preamble.html  rss.xml  tag.html
